add leetcode solutions